k8s/base/ptech-newsletter.de.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptech-newsletter
spec:
  selector:
    matchLabels:
      app: ptech-news
  replicas: 1
  template:
    metadata:
      labels:
        app: ptech-news
    spec:
      restartPolicy: Always
      containers:
      - name: ptech-newsletter
        image: gcr.io/patagonian-infra/ptechnews:latest
        command: ['sh','-c','mv /tmp/artifact/wp-config.php /usr/share/nginx/html/wp-config.php;nginx -g daemon off']
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-p887m
          readOnly: true
        - name: tmp
          mountPath: /tmp/artifact
      volumes:
      - name: default-token-p887m
        secret:
          defaultMode: 420
          secretName: default-token-p887m
      - name: wp-config
        configMap:                                                          
          defaultMode: 420                                                  
          name: wp-config                                                
      - name: tmp
        emptyDir: {}
