k8s/base/ptech-newsletter.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptech-news
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ptech-news
